@@ -25,4 +25,10 @@ void EXPORT_FUNC(grub_keyboard_controller_init) (void);
 int EXPORT_FUNC(grub_console_checkkey) (void);
 int EXPORT_FUNC(grub_console_getkey) (void);
 
+/* Initialize the console system.  */
+void grub_console_init (void);
+
+/* Finish the console system.  */
+void grub_console_fini (void);
+
 #endif /* ! GRUB_CONSOLE_MACHINE_HEADER */
